--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.3.0",
     "react-paypal-js": "^0.0.1-security",
     "react-router": "^6.3.0",
