--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "cloudinary": "^1.32.0",
     "express-async-handler": "^1.2.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -22,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "streamifier": "^0.1.1",
     "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
