--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Ecommerce webapp",
   "main": "index.js",
   "scripts": {
-    "build": "cd backend && cd ../frontend && npm install && npm run build",
+    "build": "cd backend && npm install --legacy-peer-deps  && cd ../frontend && npm install && npm run build",
     "start": "node backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "16.13.1"
   },
   "repository": {
     "type": "git",
